--- a/index.html
+++ b/index.html
@@ -11,18 +11,38 @@
 </head>
 
 <body>
-    <nav class="navbar">
-        <div class="logo">
-            <h1>QuickLoad</h1>
-        </div>
-        <div class="nav-links">
-            <a href="#home">Home</a>
-            <a href="#services">Services</a>
-            <a href="#about">About</a>
-            <a href="#contact">Contact</a>
-            <button id="loginBtn" class="login-btn">Login</button>
-        </div>
-    </nav>
+    <header>
+        <nav class="navbar">
+            <div class="nav-container">
+                <div class="nav-brand">
+                    <img src="./assets/quickload_logo.png" alt="QuickLoad" class="logo-img">
+                    <h1 class="logo-text">QuickLoad</h1>
+                </div>
+
+                <div class="nav-right">
+                    <div class="nav-links">
+                        <a href="#" class="nav-link active">Home</a>
+                        <a href="#services" class="nav-link">Services</a>
+                        <a href="#about" class="nav-link">About</a>
+                        <a href="#contact" class="nav-link">Contact</a>
+                    </div>
+
+                    <div class="nav-actions">
+                        <button id="loginBtn" class="login-btn">
+                            <i class="fas fa-user"></i>
+                            <span>Login</span>
+                        </button>
+                    </div>
+                </div>
+
+                <button class="mobile-menu-btn">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </button>
+            </div>
+        </nav>
+    </header>
 
     <div id="loginModal" class="modal">
         <div class="modal-content">
@@ -269,7 +289,7 @@
         </div>
     </footer>
 
-    <script src="main.js"></script>
+    <script type="module" src="./js/main.js"></script>
 </body>
 
 </html>
