fixed some issues

--- a/dashboard.html
+++ b/dashboard.html
@@ -65,9 +65,16 @@
                 <input type="text" id="toLocation" placeholder="To Location" required>
                 <select id="vehicleType" required>
                     <option value="">Select Vehicle Type</option>
-                    <option value="SUV">SUV</option>
-                    <option value="Sedan">Sedan</option>
-                    <option value="Mini">Mini</option>
+                    <option value="Mini Truck">Mini Truck</option>
+                    <option value="Light Commercial Vehicle (LCV)">Light Commercial Vehicle (LCV)</option>
+                    <option value="Medium Duty Truck (MDT)">Medium Duty Truck (MDT)</option>
+                    <option value="Heavy Duty Truck (HDT)">Heavy Duty Truck (HDT)</option>
+                    <option value="Multi-Axle Truck">Multi-Axle Truck</option>
+                    <option value="Refrigerated Truck">Refrigerated Truck</option>
+                    <option value="Container Truck">Container Truck</option>
+                    <option value="Tanker Truck">Tanker Truck</option>
+                    <option value="Tipper Truck">Tipper Truck</option>
+                    <option value="Trailer">Trailer</option>
                 </select>
                 <input type="number" id="price" placeholder="Price" required>
                 <button type="submit">Add Rate</button>
@@ -104,9 +111,16 @@
                 <input type="text" id="editFromLocation" required>
                 <input type="text" id="editToLocation" required>
                 <select id="editVehicleType" required>
-                    <option value="SUV">SUV</option>
-                    <option value="Sedan">Sedan</option>
-                    <option value="Mini">Mini</option>
+                    <option value="Mini Truck">Mini Truck</option>
+                    <option value="Light Commercial Vehicle (LCV)">Light Commercial Vehicle (LCV)</option>
+                    <option value="Medium Duty Truck (MDT)">Medium Duty Truck (MDT)</option>
+                    <option value="Heavy Duty Truck (HDT)">Heavy Duty Truck (HDT)</option>
+                    <option value="Multi-Axle Truck">Multi-Axle Truck</option>
+                    <option value="Refrigerated Truck">Refrigerated Truck</option>
+                    <option value="Container Truck">Container Truck</option>
+                    <option value="Tanker Truck">Tanker Truck</option>
+                    <option value="Tipper Truck">Tipper Truck</option>
+                    <option value="Trailer">Trailer</option>
                 </select>
                 <input type="number" id="editPrice" required>
                 <button type="submit">Update</button>
