deployed the webiste

--- a/dashboard.html
+++ b/dashboard.html
@@ -20,11 +20,11 @@
         <header class="dashboard-header">
             <div class="header-container">
                 <div class="header-left">
-                    <h1>Dashboard</h1>
+                    <h1>QuickLoad</h1>
                     <nav class="breadcrumb">
-                        <span>Home</span>
+                        <span style="cursor: pointer;" onclick="window.location.href = '/index.html';">Home</span>
                         <i class="fas fa-chevron-right"></i>
-                        <span>Dashboard</span>
+                        <!-- <span>Dashboard</span> -->
                     </nav>
                 </div>
 
