--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
             <p>Experience seamless logistics management on your mobile device</p>
             <div class="app-download-buttons">
                 <a href="#" class="app-store-button">
-                    <img src="assets/app-store-badge.png" alt="Download on App Store">
+                    <img src="assets/app-store-badge.png" style="width: 100%;" alt="Download on App Store">
                 </a>
                 <a href="#" class="play-store-button">
-                    <img src="assets/play-store-badge.png" alt="Get it on Google Play">
+                    <img src="assets/play-store-badge.png" style="width: 100%;" alt="Get it on Google Play">
                 </a>
             </div>
             <div class="app-features">
