--- a/index.html
+++ b/index.html
@@ -44,20 +44,23 @@
         </nav>
     </header>
 
-    <div id="loginModal" class="modal">
+    <div id="loginModal" class="modal" role="dialog" aria-labelledby="loginModalTitle" aria-hidden="true">
         <div class="modal-content">
-            <span class="close">&times;</span>
-            <h2>Login to QuickLoad</h2>
-            <form id="loginForm">
+            <span class="close" aria-label="Close login modal">&times;</span>
+            <h2 id="loginModalTitle">Login to QuickLoad</h2>
+            <form id="loginForm" novalidate>
                 <div class="form-group">
                     <label for="username">Username</label>
-                    <input type="text" id="username" required>
+                    <input type="text" id="username" name="username" required autocomplete="username"
+                        placeholder="Enter your username" aria-describedby="username-error" minlength="3"
+                        maxlength="50">
                 </div>
                 <div class="form-group">
                     <label for="password">Password</label>
-                    <input type="password" id="password" required>
+                    <input type="password" id="password" name="password" required autocomplete="current-password"
+                        placeholder="Enter your password" aria-describedby="password-error" minlength="6">
                 </div>
-                <button type="submit">Login</button>
+                <button type="submit" aria-describedby="login-error">Login</button>
             </form>
         </div>
     </div>
